force-app/main/default/objects/Notification_Event__e/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <label>Channel Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>