force-app/main/default/objects/Notification_Event__e/fields/Payload_JSON__c.field-meta.xml
<CustomField>
    <fullName>Payload_JSON__c</fullName>
    <label>Payload JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>