force-app/main/default/objects/Notification_Event__e/fields/Recipient_Ids__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Ids__c</fullName>
    <label>Recipient Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>