force-app/main/default/objects/Notification_Event__e/fields/Replay_Token__c.field-meta.xml
<CustomField>
    <fullName>Replay_Token__c</fullName>
    <label>Replay Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>